# ProRobMan

./: CMakeLists.txt  README.md  install_blender.sh  package.xml
launch/: franka_gazebo_world.launch  gazebo_world.launch
meshes/: cube_0.dae  cube_1.dae  cube_10.dae  cube_11.dae  cube_12.dae  cube_13.dae  cube_14.dae  cube_15.dae  cube_16.dae  cube_17.dae  cube_18.dae  cube_19.dae  cube_2.dae  cube_20.dae  cube_21.dae  cube_22.dae  cube_23.dae  cube_24.dae  cube_25.dae  cube_26.dae  cube_27.dae  cube_3.dae  cube_4.dae  cube_5.dae  cube_6.dae  cube_7.dae  cube_8.dae  cube_9.dae
scripts/: generate_cubes.py  move_head.py  spawn_cubes.py
worlds/: exp.world  rviz_config.rviz
