<?xml version="1.0"?>
<package>
  <name>ProRobMan</name>
  <version>2.3.1</version>
  <description>The tiago_dual_gazebo package for Project RobMan</description>
  <maintainer email="ali@robot-learning.de">Ali</maintainer>
  <author email="ali@robot-learning.de">Ali</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_worlds</run_depend>
  <run_depend>pal_hardware_gazebo</run_depend>
  <run_depend>tiago_gazebo</run_depend>
  <run_depend>tiago_dual_bringup</run_depend>
  <run_depend>tiago_dual_controller_configuration_gazebo</run_depend>
  <run_depend>tiago_dual_description</run_depend>
  <run_depend>pal_gripper_controller_configuration_gazebo</run_depend>
  <run_depend>pal_pcl_points_throttle_and_filter</run_depend>

  <run_depend>rospy</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <run_depend>gazebo_ros</run_depend>
  <build_depend>gazebo_ros</build_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/meshes"/> 
  </export>

</package>